fixed-layout issues

--- a/src/components/CarsGroups/CarItem/CarItem.scss
+++ b/src/components/CarsGroups/CarItem/CarItem.scss
@@ -1,7 +1,5 @@
-.caritem{
+.caritem{ 
     &-container{
-        width: 300px;
-        height: 100%;
         flex-direction: column;
         justify-content: flex-start;
     }
