--- a/src/components/CarsGroups/CarsGroups.scss
+++ b/src/components/CarsGroups/CarsGroups.scss
@@ -42,6 +42,7 @@
     &-items{
         display: flex;
         flex-direction: row;
+        justify-content: space-between;
         margin-top: 20px;
     }
 }
