--- a/src/components/Slider/SliderPage.scss
+++ b/src/components/Slider/SliderPage.scss
@@ -10,7 +10,7 @@
         .each-slide{
             height: 60vh;
             &>img{
-                height: 60vh;
+                // height: 60vh;
                 width: 110%;
             }
         }
